<resources>
    <string name="app_name">Weather</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_current_location_icon">Choose current location icon</string>
    <string name="menu_item_options">Settings</string>
    <string name="menu_item_weather">Weather</string>
    <string name="precipitation_label">Precipitation:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="current_weather_icon">Weather icon</string>
    <string name="pressure_label">Pressure:</string>
    <string name="o">o</string>
    <string name="pressure">pressure</string>
    <string name="_25">25</string>
    <string name="localtimedate">LocalTimeDate</string>
    <string name="_10">-10</string>
    <string name="celsius_fahrenheit_unit">C</string>
    <string name="detailed_weather_icon">Detailed weather icon</string>
    <string name="current_weather_description">CurrentWeatherDescription</string>
    <string name="feels_like_label">Feels like:</string>
    <string name="_10_velue">10</string>
    <string name="mmhg">mmHg</string>
    <string name="five_days_weather_forecast">5-day weather forecast</string>
    <string name="wind_label">Wind:</string>
    <string name="choose_background">Choose background color</string>
    <string name="no_location_detected">Cannot get coordinates. Make sure that geolocation is allowed in the settings.</string>
    <string name="permission_rationale">Geolocation permission is necessary for basic functionality.</string>
    <string name="permission_denied_explanation">Permissions were not granted</string>
    <string name="enter_location">Enter location</string>
    <string name="location_error_notice">Error getting data\nSpecify location</string>
    <string name="weather_icon_small_description">Small weather icon</string>
    <string name="visibility_label">Visibility:</string>
    <string name="weather">Weather</string>
    <string name="add_location">Add location</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="units">Units of measurement</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="m_per_second">m/s</string>
    <string name="miles_per_hour">miles/h</string>
    <string name="colors">Colors</string>
    <string name="mm_hg">mm Hg</string>
    <string name="mBar">mBar</string>
    <string name="weather_now_icon">Current weather icon</string>
    <string name="weather_now">Current weather</string>
    <string name="options_label">Settings</string>
    <string name="choose_background_label">Choose background</string>
    <string name="show_units_options">Show settings</string>
    <string name="show_colors">Show colors</string>
    <string name="weather_icon">Set weather icon</string>
    <string name="weather_icon_1_set">Icon sets 1</string>
    <string name="weather_icon_2_set">Icon sets 2</string>
    <string name="weather_icon_3_set">Icon sets 3</string>
    <string name="weather_icon_4_set">Icon sets 4</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="channel_name">Weather Channel</string>
    <string name="channel_description">Weather Channel</string>
    <string name="notification_title">Weather</string>
    <string name="notification_text">Weather notification</string>
    <string name="notification_text_1" translatable="false">Weather in</string>
    <string name="notification_text_2" translatable="false">is</string>
    <string name="language_option">Language</string>
    <string name="language_vi_option">Vietnamese</string>
    <string name="language_en_option">English</string>
    <string name="language_es_option">Spanish</string>
    <string name="appwidget_text">Hello, Weather!</string>


</resources>