<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewWeatherItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/blue2"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textViewLocalTimeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/localtimedate"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCurrentWeatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/current_weather_description"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewLocalTimeDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewLocalTimeDate" />

        <TextView
            android:id="@+id/textViewCurrentTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="@string/_10"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="@+id/textViewFeelsLikeLabel"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCurrentWeatherIcon" />

        <TextView
            android:id="@+id/textViewOLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/o"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/textViewCurrentTemperature"
            app:layout_constraintTop_toTopOf="@+id/textViewCurrentTemperature" />

        <TextView
            android:id="@+id/textViewCorF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/celsius_fahrenheit_unit"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textViewOLabel1"
            app:layout_constraintTop_toTopOf="@+id/textViewOLabel1" />

        <ImageView
            android:id="@+id/imageViewCurrentWeatherIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="52dp"
            android:contentDescription="@string/detailed_weather_icon"
            app:layout_constraintStart_toStartOf="@+id/textViewFeelsLikeLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentWeatherDescription"
            app:srcCompat="@drawable/day_clear" />

        <TextView
            android:id="@+id/textViewFeelsLikeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:text="@string/feels_like_label"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textViewVisibility"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_10_velue"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFeelsLikeLabel"
            app:layout_constraintStart_toEndOf="@+id/textViewFeelsLikeLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewFeelsLikeLabel" />

        <TextView
            android:id="@+id/textViewOLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/o"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@+id/textViewFeelsLike"
            app:layout_constraintTop_toTopOf="@+id/textViewFeelsLike"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textViewCorF2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/celsius_fahrenheit_unit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFeelsLike"
            app:layout_constraintStart_toEndOf="@+id/textViewOLabel2"
            app:layout_constraintTop_toTopOf="@+id/textViewFeelsLike" />

        <TextView
            android:id="@+id/textViewCurrentPrecipitationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/precipitation_label"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewPrecipitation"
            app:layout_constraintStart_toEndOf="@+id/imageViewPrecipitation" />

        <TextView
            android:id="@+id/textViewCurrentPrecipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCurrentPrecipitationLabel"
            app:layout_constraintStart_toEndOf="@+id/textViewCurrentPrecipitationLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewCurrentPrecipitationLabel"
            tools:text="46% (0.25мм)" />

        <TextView
            android:id="@+id/textViewCurrentPressureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pressure_label"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewPressure"
            app:layout_constraintStart_toEndOf="@+id/imageViewPressure"
            app:layout_constraintTop_toTopOf="@+id/imageViewPressure" />

        <TextView
            android:id="@+id/textViewCurrentPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCurrentPressureLabel"
            app:layout_constraintStart_toEndOf="@+id/textViewCurrentPressureLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewCurrentPressureLabel"
            tools:text="755 мм рт.ст." />

        <TextView
            android:id="@+id/textViewCurrentHumidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/humidity_label"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHumidity"
            app:layout_constraintStart_toEndOf="@+id/imageViewHumidity"
            app:layout_constraintTop_toTopOf="@+id/imageViewHumidity" />

        <TextView
            android:id="@+id/textViewCurrentHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCurrentHumidityLabel"
            app:layout_constraintStart_toEndOf="@+id/textViewCurrentHumidityLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewCurrentHumidityLabel"
            tools:text="79 %" />

        <TextView
            android:id="@+id/textViewWindLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/wind_label"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewWind"
            app:layout_constraintStart_toEndOf="@+id/imageViewWind"
            app:layout_constraintTop_toTopOf="@+id/imageViewWind" />

        <TextView
            android:id="@+id/textViewWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textViewWindLabel"
            app:layout_constraintStart_toEndOf="@+id/textViewWindLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewWindLabel"
            tools:text="4 м/с" />

        <ImageView
            android:id="@+id/imageViewWind"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:padding="2dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHumidity"
            app:srcCompat="@drawable/weather_wind_icon_161268"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageViewPrecipitation"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:padding="2dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocalTimeDate"
            app:srcCompat="@drawable/keepdry_weather_rain_umbrella_4568"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageViewHumidity"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:padding="2dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPressure"
            app:srcCompat="@drawable/raindrops54656"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageViewPressure"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:padding="2dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPrecipitation"
            app:srcCompat="@drawable/pressure_meter_icon_177217"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageViewVisibility"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:padding="2dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewWind"
            app:srcCompat="@drawable/visibility_118485"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewVisibilityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/visibility_label"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewVisibility"
            app:layout_constraintStart_toEndOf="@+id/imageViewVisibility"
            app:layout_constraintTop_toTopOf="@+id/imageViewVisibility" />

        <TextView
            android:id="@+id/textViewVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textViewVisibilityLabel"
            app:layout_constraintStart_toEndOf="@+id/textViewVisibilityLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewVisibilityLabel"
            tools:text="10000 м" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>